@@ -8,6 +8,7 @@ Bugs fixed:
 - 3162016 sfcbd Segmentation fault in cleanupCimXmlRequest
 - 3172080 deliverIndication does not check for matching FROM classes
 - 3185178 Wrong classname for returned instances from execQuery
+- 3175770 execQuery returns multiple instances of same object
 
 Changes in 1.3.10
 =================
